--- a/assignment.tex
+++ b/assignment.tex
@@ -49,26 +49,21 @@
 \solution :\\
 As given in the question ;\\
 \begin{align}
-	\pr{\bar E+\bar F}=0.25
+	\pr{E^\prime+ F^\prime}=0.25
 \end{align}
-As , 
-\begin{align}
-	\pr{\bar E+\bar F}=\pr{\overline{(\bar E \bar F)}} \nonumber \\
-	\implies \pr{\overline{\bar E \bar F}}
-\end{align}
-\begin{align}
-	\implies 1-\pr{EF}=0.25 \nonumber
-\end{align}
+
+$$\pr{E^\prime+ F^\prime}= \Pr{(EF)}^\prime \\$$	
+$$\implies 1-\pr{EF}=0.25$$ 
 \begin{align}
 	\implies \pr{EF}=0.75
 \end{align}
-\begin{align}
-	\because \pr{EF}\neq 0
-\end{align}
+
+	$$\because \pr{EF}\neq 0$$ \\
+
 		As, the condition of mutually exclusive is 
-\begin{align}
-	\pr{EF}=\emptyset
-\end{align} 
+
+	$$\pr{EF}=\emptyset$$ \\
+
 $\therefore$ E and F are not mutually exclusive events.
 
 
