--- a/assignment.tex
+++ b/assignment.tex
@@ -1,4 +1,3 @@
-
 \documentclass[journal,12pt,two column]{IEEEtran}
 %\usepackage{setspace}
 \usepackage{listings}
@@ -46,7 +45,7 @@
 \newcommand{\solution}{\noindent \textbf{Solution: }}
 \begin{document}
 \maketitle
-\question: 16 : Events E and F are such that P(Not E or not F)=0.25, State whether E and F are mutually exclusive.\\
+\question: 16 : Events $E$ and $F$ are such that \pr{E^\prime +F^\prime} = 0.25, State whether $E$ and $F$ are mutually exclusive.\\
 \solution :\\
 As given in the question ;
  \begin{align} 
@@ -55,11 +54,14 @@ As given in the question ;
  	\implies 1-\pr{EF}&=0.25 \\
 	\implies \pr{EF}&=0.75 
  \end{align}
-	$$\because \pr{EF}\neq 0$$\\
+ \begin{align}
+ 	\because \pr{EF}\ne 0 
+ \end{align}	
 		As, the condition of mutually exclusive is 
-
-	$$\pr{EF}=\emptyset$$ 
-\begin{center}$\therefore$ E and F are not mutually exclusive events.\end{center}
+  \begin{align}
+  	\pr{EF}=\emptyset
+  \end{align}	 
+\begin{center}$\therefore$ $E$ and $F$ are not mutually exclusive events.\end{center}
 
 
 
