--- a/assignment2/assign2.tex
+++ b/assignment2/assign2.tex
@@ -49,25 +49,25 @@
 A box contains 12 balls, out of which $x$ are black. If one ball is drawn at random from the box, what is the probability that it will be a black ball?\\ If 6 more black balls are put in the box, the probability of drawing a black ball is now double of what it was before. Find $x$.\\
 \solution \\
 \begin{enumerate}
-    \item Total number of black balls = $x$
-    \item Total number of balls = 12 \\
+    
+    \item[(i)]  Total number of black balls = $x$\\
+          Total number of balls = 12 \\
    The probability of getting a black ball is given by:
-  $$\pr{\textbf{black ball}} = \frac{x}{12} \quad \text{(i)}$$
-  
-  \item After adding 6 more black balls, the total number of balls becomes = 18 \\
-  
-  \item Now the total number of black balls becomes = $x+6$.
-  
-  \item The probability of getting a black ball now is given by:
-  
-  $$\pr{\textbf{black ball}} = \frac{x+6}{18} \quad \text{(ii)}$$
-  
-  \item It is given that the probability of drawing a black ball now is double of what it was before. So we have:
-  
-  $$\text{(ii)} = 2 \times \text{(i)}$$
-
-  $$\frac{x+6}{18} = 2 \times \frac{x}{12}$$  \\
-  \text Solving the equation, we get:
+\begin{align}   
+   \pr{\textbf{black ball}} &= \frac{x}{12} 
+\end{align}  
+  \item[(ii)] After adding 6 more black balls, the total number of balls becomes = 18 \\  
+    Now the total number of black balls becomes = $x+6$.  \\
+    The probability of getting a black ball now is given by:
+\begin{align}  
+  \pr{\textbf{black ball}} &= \frac{x+6}{18} 
+\end{align}  
+    It is given that the probability of drawing a black ball now is double of what it was before. So we have: 
+   $$\text{(i)} = 2 \times \text{(ii)}$$   
+\begin{align}
+  \frac{x+6}{18} &= 2 \times \frac{x}{12}  
+\end{align}  
+   Solving the equation, we get:
 \begin{align}   
  x + 6 &= 3x \\
   2x &= 6 \\
