--- a/assignment2/assign2.tex
+++ b/assignment2/assign2.tex
@@ -47,23 +47,26 @@
 \maketitle
 \question 2)
 A box contains 12 balls, out of which $x$ are black. If one ball is drawn at random from the box, what is the probability that it will be a black ball?\\ If 6 more black balls are put in the box, the probability of drawing a black ball is now double of what it was before. Find $x$.\\
-\solution \\
+\solution 
+\begin{center}
+Let the event black balls be denoted by \textbf B
+\end{center}
 \begin{enumerate}
-    
-    \item[(i)]  Total number of black balls = $x$\\
+  
+    \item Total number of black balls = $x$\\
           Total number of balls = 12 \\
    The probability of getting a black ball is given by:
 \begin{align}   
-   \pr{\textbf{black ball}} &= \frac{x}{12} 
+   \pr{\textbf{B}} &= \frac{x}{12} 
 \end{align}  
-  \item[(ii)] After adding 6 more black balls, the total number of balls becomes = 18 \\  
+  \item After adding 6 more black balls, the total number of balls becomes = 18 \\  
     Now the total number of black balls becomes = $x+6$.  \\
     The probability of getting a black ball now is given by:
 \begin{align}  
-  \pr{\textbf{black ball}} &= \frac{x+6}{18} 
+  \pr{\textbf{B}} &= \frac{x+6}{18} 
 \end{align}  
     It is given that the probability of drawing a black ball now is double of what it was before. So we have: 
-   $$\text{(i)} = 2 \times \text{(ii)}$$   
+   $$\text{((1))} = 2 \times \text{((2))}$$   
 \begin{align}
   \frac{x+6}{18} &= 2 \times \frac{x}{12}  
 \end{align}  
