--- a/assignment2/assign2.tex
+++ b/assignment2/assign2.tex
@@ -57,18 +57,17 @@ Let the event black balls be denoted by \textbf B
           Total number of balls = 12 \\
    The probability of getting a black ball is given by:
 \begin{align}   
-   \pr{\textbf{B}} &= \frac{x}{12} 
+   \pr{\text{B}} &= \frac{x}{12} 
 \end{align}  
   \item After adding 6 more black balls, the total number of balls becomes = 18 \\  
     Now the total number of black balls becomes = $x+6$.  \\
     The probability of getting a black ball now is given by:
 \begin{align}  
-  \pr{\textbf{B}} &= \frac{x+6}{18} 
+  \pr{\text{B}} &= \frac{x+6}{18} 
 \end{align}  
-    It is given that the probability of drawing a black ball now is double of what it was before. So we have: 
-   $$\text{((1))} = 2 \times \text{((2))}$$   
+    It is given that the probability of drawing a black ball now is double of what it was before. So we have:    
 \begin{align}
-  \frac{x+6}{18} &= 2 \times \frac{x}{12}  
+  \frac{x+6}{18} &= 2 \times \frac{x}{12}
 \end{align}  
    Solving the equation, we get:
 \begin{align}   
