--- a/assignment2/assign2.tex
+++ b/assignment2/assign2.tex
@@ -49,7 +49,7 @@
 A box contains 12 balls, out of which $x$ are black. If one ball is drawn at random from the box, what is the probability that it will be a black ball?\\ If 6 more black balls are put in the box, the probability of drawing a black ball is now double of what it was before. Find $x$.\\
 \solution 
 \begin{center}
-Let the event black balls be denoted by \textbf B
+Let the event black balls be denoted by \text B
 \end{center}
 \begin{enumerate}
   
