--- a/assignment2/assign2.tex
+++ b/assignment2/assign2.tex
@@ -49,7 +49,7 @@
 A box contains 12 balls, out of which $x$ are black. If one ball is drawn at random from the box, what is the probability that it will be a black ball?\\ If 6 more black balls are put in the box, the probability of drawing a black ball is now double of what it was before. Find $x$.\\
 \solution 
 \begin{center}
-Let the event black balls be denoted by \text B
+Let the event black balls be denoted by B
 \end{center}
 \begin{enumerate}
   
@@ -57,13 +57,13 @@ Let the event black balls be denoted by \text B
           Total number of balls = 12 \\
    The probability of getting a black ball is given by:
 \begin{align}   
-   \pr{\text{B}} &= \frac{x}{12} 
+   \pr{B} &= \frac{x}{12} 
 \end{align}  
   \item After adding 6 more black balls, the total number of balls becomes = 18 \\  
     Now the total number of black balls becomes = $x+6$.  \\
     The probability of getting a black ball now is given by:
 \begin{align}  
-  \pr{\text{B}} &= \frac{x+6}{18} 
+  \pr{B} &= \frac{x+6}{18} 
 \end{align}  
     It is given that the probability of drawing a black ball now is double of what it was before. So we have:    
 \begin{align}
