--- a/assignment3/assignc3.tex
+++ b/assignment3/assignc3.tex
@@ -117,9 +117,9 @@ Consider the experiment of throwing a die.
 \solution\tableofcontents
 \section{Markov Chain States}
 \begin{itemize}
-    \item  Let us construct a Markov chain $X_t$ with discrete time t.
-    \item  The states $e_0$, $e_1$ and $e_2$ describe the outcomes from the latest dice throw.
-    \item   The states $e_3$ and $e_4$ describe the outcomes of the latest coin toss.
+    \item  Let us construct a Markov chain $X_n$ with discrete time n.
+    \item  The states $e_0$ and $e_1$ describe the outcomes from the latest dice throw.
+    \item   The states $e_2$ and $e_3$ describe the outcomes of the latest coin toss.
 \end{itemize}
 \section{States}
 Let $ Y \in \cbrak{1,2,3,4,5,6} $ denote the number obtained from a die throw. 
@@ -141,38 +141,38 @@ Let $ Y \in \cbrak{1,2,3,4,5,6} $ denote the number obtained from a die throw.
 \section{Description of Graphs and States}
  $p_{j/i}$ is the probability of moving from state $e_i$ to $e_j$.
     \begin{align}
-    p_{j/i} = \pr{\frac{ X_{t+1}=j } {X_t=i} }
+    p_{j/i} = \pr{\frac{ X_{n+1}=j } {X_n=i} }
     \end{align}
     \textbf{Absorbing States}
-    States $e_3$ and $e_4$ are absorbing states because $p_{3/3}=1$ and $p_{4/4}=1$. Once entered, they cannot be left.\\
+    States $e_2$ and $e_3$ are absorbing states because $p_{2/2}=1$ and $p_{3/3}=1$. Once entered, they cannot be left.\\
     \textbf{Transient States}
-    States $e_0$, $e_1$ and $e_2$ are transient states, because they lead to other states which have no return path, For example, $p_{3/2}=\frac{1}{2}$ but $p_{2/3}= 0$. Their probability will reduce to 0 eventually.   
+    States $e_0$ and $e_1$ are transient states, because they lead to other states which have no return path, For example, $p_{2/1}=\frac{1}{2}$ but $p_{1/2}= 0$. Their probability will reduce to 0 eventually.   
 \section{Transition Probability}
 \textbf{State Probabilities in Next Step:}
 {State Probabilities in Next Step}
-    Let $\prt{i}{t}$ be the probability of state i at time t. 
+    Let $\prt{i}{n}$ be the probability of state i at time n. 
     Then the state vector is,   
     \begin{align}
-        \vec{Q_t} &= \myvec{\prt{0}{t}\\ 
-        			        \prt{1}{t} \\
-        			        \prt{2}{t} \\
-        			        \prt{3}{t} \\
-        			        \prt{4}{t} }
+        \vec{Q_n} &= \myvec{\prt{0}{n}\\ 
+        			        \prt{1}{n} \\
+        			        \prt{2}{n} \\
+        			        \prt{3}{n} 
+        			        }        
     \end{align}    
     The probabilities after one step in time are
     \begin{align}
-       \prt{0}{t+1} &= \frac{1}{6} \times \prt{0}{t} + \frac{1}{6} \times \prt{1}{t} \\
-       \prt{1}{t+1} &= \frac{1}{6} \times \prt{0}{t} + \frac{1}{6} \times \prt{1}{t} \\
-       \prt{2}{t+1} &= \frac{4}{6} \times \prt{0}{t} + \frac{4}{6} \times \prt{1}{t} \\
-       \prt{3}{t+1} &= \frac{1}{2} \times \prt{2}{t} + 1 \times \prt{3}{t} \\
-       \prt{4}{t+1} &= \frac{1}{2} \times \prt{2}{t} + 1 \times \prt{4}{t} 
+       \prt{0}{n+1} &= \frac{2}{6} \times \prt{0}{n}  \\
+       \prt{1}{n+1} &= \frac{4}{6} \times \prt{0}{n}  \\
+       \prt{2}{n+1} &= \frac{1}{2} \times \prt{1}{n} + 1 \times \prt{2}{n}
+\\
+       \prt{3}{n+1} &= \frac{1}{2} \times \prt{1}{n} + 1 \times \prt{3}{n} 
     \end{align}
     
 \section{Transition Probability Matrix}
 
     The previous equations can be summarized as
     \begin{align}
-        \vec{Q_{t+1}} &= \vec{P}\vec{Q_t} 
+        \vec{Q_{n+1}} &= \vec{P}\vec{Q_n} 
         \label{eq:transtition}        
     \end{align}
     Where $\vec{P}$ is the transition probability matrix. Its elements are values of $p_{i/j}$
@@ -184,27 +184,27 @@ Let $ Y \in \cbrak{1,2,3,4,5,6} $ denote the number obtained from a die throw.
 \textbf{Initial Condition}
      The given condition is that \lq3 occurs at least once\rq. Let the first occurrence of 3 be the initial state $ \vec{Q_0}$.
     \begin{align}
-        \vec{Q_0} &= \myvec{ 1 \\ 0 \\ 0 \\ 0 \\ 0 } 
+        \vec{Q_0} &= \myvec{ 1 \\ 0 \\ 0 \\ 0 } 
     \end{align}
     Using equation \eqref{eq:transtition}, further states can be generated.
     \begin{align}
         \vec{Q_1} &= \vec{P} \vec{Q_{0}}
-            = \myvec{\frac{1}{6} \\ \frac{1}{6}  \\ \frac{4}{6} \\ 0 \\ 0}\\
+            = \myvec{\frac{2}{6} \\[4pt] \frac{4}{6}  \\[4pt] 0 \\ 0}\\
         \vec{Q_2} &= \vec{P} \vec{Q_1} = \vec{P}^{2} \vec{Q_0} 
-            = \myvec{\frac{1}{18} \\ \frac{1}{18} \\ \frac{2}{9} \\\frac{1}{3} \\ \frac{1}{3}}\\   
+            = \myvec{\frac{4}{9}  \\[4pt] \frac{8}{9}  \\[4pt] \frac{5}{24}\\[4pt] \frac{5}{12}} \\   
         \vdots \\
-        \vec{Q_t} &= \vec{P}^{t} \vec{Q_0}
+        \vec{Q_n} &= \vec{P}^{n} \vec{Q_0}
     \end{align}
 \textbf{Limiting Probabilities of States}
-    These can can be approximately calculated by taking large value of t,
+    These can can be approximately calculated by taking large value of n,
     \begin{align}
-       \lim_{t \to \infty}  \vec{Q_t} &= 
+       \lim_{n \to \infty}  \vec{Q_n} &= 
        \myvec{\input{tables/table3.txt}} 
     \end{align}
 \textbf{Required Conditional Probability}
     Probability of the coin showing tails, given that at least one die shows a 3,
     \begin{align}
-       \lim_{t \to \infty} \prt{4}{t} = 0.5
+       \lim_{n \to \infty} \prt{3}{n} = 0.5
     \end{align}
     
 \end{document}
