--- a/assignment3/tables/table1.tex
+++ b/assignment3/tables/table1.tex
@@ -192,29 +192,23 @@
 	 \multicolumn{1}{|p{\gnumericColA}|}%
 	{\gnumericPB{\centering}\gnumbox{0}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
-	{\gnumericPB{\centering}\gnumbox{$Y=3$ }}
+	{\gnumericPB{\centering}\gnumbox{$Y=3$ OR $Y=6$}}
 \\
 \hhline{|--|}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
 	{\gnumericPB{\centering}\gnumbox{1}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
-	{\gnumericPB{\centering}\gnumbox{$Y=6$ }}
+	{\gnumericPB{\centering}\gnumbox{$\sum \brak{Y= k}; k \in \cbrak{1,2,4,5} $ }}
 \\
 \hhline{|--|}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
 	{\gnumericPB{\centering}\gnumbox{2}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
-	{\gnumericPB{\centering}\gnumbox{$\sum \brak{Y= k}; k \in \cbrak{1,2,4,5} $ }}
-\\
-\hhline{|--|}
-	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\centering}\gnumbox{3}}
-	&\multicolumn{1}{p{\gnumericColB}|}%
 	{\gnumericPB{\centering}\gnumbox{Obtaining heads from coin toss }}
 \\
 \hhline{|--|}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\centering}\gnumbox{4}}
+	{\gnumericPB{\centering}\gnumbox{3}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{\gnumericPB{\centering}\gnumbox{Obtaining tails from coin toss}}
 \\
